syntax = "proto3";

option go_package = "github.com/NethermindEth/juno/internal/transaction";

message Transaction {
  bytes hash = 1;
  oneof tx {
    Deploy deploy = 2;
    InvokeFunction invoke = 3;
    Declare declare = 4;
  }
}

message Deploy {
  bytes classHash = 1;
  bytes contractAddress = 2;
  bytes contractAddressSalt = 3;
  repeated bytes constructorCallData = 4;
}

message InvokeFunction {
  bytes contractAddress = 2;
  bytes entryPointSelector = 3;
  repeated bytes callData = 4;
  repeated bytes signature = 5;
  bytes maxFee = 6;
}

message Declare {
  bytes classHash = 1;
  bytes senderAddress = 2;
  bytes maxFee = 3;
  repeated bytes signature = 4;
  bytes nonce = 5;
  bytes version = 6;
}

message Receipt {
  oneof receipt {
    DeployReceipt deploy = 1;
    InvokeReceipt invoke = 2;
    DeclareReceipt declare = 3;
  }
}

message ReceiptCommon {
  bytes txnHash = 1;
  bytes actualFee = 2;
  Status status = 3;
  bytes blockHash = 4;
  uint64 blockNumber = 5;
}

message InvokeReceipt {
  ReceiptCommon common = 1;
  repeated MsgToL1 messagesSent = 2;
  MsgToL2 l1OriginMessage = 3;
  repeated Event events = 4;
}

message DeployReceipt {
  ReceiptCommon common = 1;
}

message DeclareReceipt {
  ReceiptCommon common = 1;
}

enum Status {
  UNKNOWN = 0;
  RECEIVED = 1;
  PENDING = 2;
  ACCEPTED_ON_L2 = 3;
  ACCEPTED_ON_L1 = 4;
  REJECTED = 5;
}

message MsgToL1 {
  bytes fromAddress = 1;
  bytes toAddress = 2;
  repeated bytes payload = 3;
}

message MsgToL2 {
  bytes fromAddress = 1;
  bytes toAddress = 2;
  repeated bytes payload = 3;
}

message Event {
  bytes fromAddress = 1;
  repeated bytes keys = 2;
  repeated bytes data = 3;
}

