syntax = "proto3";

package juno.vm;
option go_package = "github.com/NethermindEth/juno/vm/pb;junopb";

message Felt { bytes be32 = 1; } // 32 bytes, big-endian

message SegmentLengths {
  oneof node {
    uint64 length = 1;
    Children children = 2;
  }
  message Children { repeated SegmentLengths items = 1; }
}

message SierraEntryPoint {
  uint64 index = 1;
  Felt selector = 2;
}

message CompiledEntryPoint {
  Felt selector = 1;
  uint64 offset = 2;
  repeated string builtins = 3;
}

message CasmClass {
  repeated Felt bytecode = 2;
  bytes hints_json = 3;                      // original JSON blob (unchanged semantics)
  bytes pythonic_hints_json = 4;             // original JSON blob (unchanged semantics)
  string compiler_version = 5;
  SegmentLengths bytecode_segment_lengths = 6;

  repeated CompiledEntryPoint external = 10;
  repeated CompiledEntryPoint l1_handler = 11;
  repeated CompiledEntryPoint constructor = 12;
}

// Cairo 0 (deprecated) class — minimal shape that your Rust parser needs
message DeprecatedEntryPoint {
  Felt selector = 1;
  Felt offset   = 2;
}

message DeprecatedCairoClass {
  bytes abi_json = 1;             // keep original ABI JSON blob intact
  repeated DeprecatedEntryPoint externals = 2;
  repeated DeprecatedEntryPoint l1_handlers = 3;
  repeated DeprecatedEntryPoint constructors = 4;
  bytes program_b64 = 5;          // original base64 program (unchanged)
}

message CompiledClass {
  uint32 cairo_version = 1;         // 0 = deprecated, 1 = sierra/casm
  uint32 abi_length = 2;            // passthrough metrics (unchanged)
  uint32 sierra_program_length = 3; // passthrough metrics (unchanged)
  string sierra_version = 4;        // “0.1.0”, “x.y.z”, etc.

  oneof class {
    DeprecatedCairoClass deprecated = 10;
    CasmClass casm = 11;
  }
}
